--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,8 +3,15 @@
 
 @import 'leaflet';
 
+
+.maps{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+
 .map{
-	width:400px;
+	width:48%;
 	height:600px;
 	background:$trib-gray4;
 }
