--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,6 +12,22 @@
 
 .map{
 	width:48%;
-	height:600px;
-	background:$trib-gray4;
+	&__headline{
+		@include label7();
+		margin:0 0 7px 0;
+	}
+
+	&__subheadline{
+		@include sans-serif();
+		margin:0 0 7px 0;
+	}
+	&__container{
+		width:100%;
+		height:600px;
+		background:$trib-gray4;		
+	}
+
+	&__source{
+		@include agate();
+	}
 }
