--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -16,20 +16,31 @@
 	width:48%;
 	&__headline{
 		@include label7();
-		margin:0 0 7px 0;
+		margin:0 0 3px 0;
 	}
 
 	&__subheadline{
 		@include sans-serif();
 		margin:0 0 7px 0;
+		max-width:200px;
 	}
 	&__container{
 		width:100%;
-		height:600px;
+		height:400px;
 		background:$trib-gray4;		
 	}
 
 	&__source{
 		@include agate();
+	}
+}
+
+@media all and (max-width: 420px){
+	.map{
+		width:100%;
+
+		&__container{
+			height:200px;
+		}
 	}
 }
