Get those legends working, including passing the format strings.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,6 +35,22 @@
 	}
 }
 
+.legend{
+	&__label{
+		@include agate();
+		position: absolute;
+		margin:0;
+		top:0;
+	}
+
+	&__box{
+		height:10px;
+		position:absolute;
+		bottom:0;
+		padding:0;
+	}
+}
+
 @media all and (max-width: 420px){
 	.map{
 		width:100%;
