--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,6 @@
 @import 'base-variables';
+$map_height:400px;
+
 @import 'base-mixins';
 
 @import 'leaflet';
@@ -26,7 +28,7 @@
 	}
 	&__container{
 		width:100%;
-		height:400px;
+		height:$map_height;
 		background:$trib-gray4;		
 	}
 
@@ -52,11 +54,17 @@
 }
 
 @media all and (max-width: 420px){
+	.maps.maps--commuter .map .map__container{ 
+		width:100%; 
+		height:$map_height;
+	}
+
 	.map{
 		width:100%;
 
 		&__container{
 			height:200px;
 		}
+
 	}
 }
